--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "BcakEnd for gate project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "knex": "^0.16.3",
+    "nodemon": "^1.18.10",
     "sqlite3": "^4.0.6"
   }
 }
